# skribe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements.txt  setup.py
benchmarks/: README.md  benchmark_utils.py  build_skribe_inspector.py  collate.py  config.yaml  monitor.sh  plot_afe_lift.py  run_afe_benchmark.sh  run_all_models.sh  run_openml_fit.py  run_promptlearn.py  test_large_prompt.py
docs/: predictor_behaviors.md  related_work.md
examples/: quickstart.py
examples/data/: fall_train.csv  fall_val.csv  mammal_train.csv  mammal_val.csv
promptlearn/: __init__.py  base.py  benchmark.py  classifier.py  cli.py  compare.py  feature_engineer.py  prompt_markers.py  regressor.py  utils.py  version.py
skribe/: __init__.py  base.py  benchmark.py  classifier.py  cli.py  compare.py  explain.py  feature_engineer.py  postprocess.py  regressor.py  utils.py  version.py
tests/: conftest.py  test_base_and_utils.py  test_benchmark_harness.py  test_classifier.py  test_cli.py  test_compare.py  test_dataset_context.py  test_explain.py  test_feature_engineer.py  test_prompt_markers.py  test_rate_limit_retry.py  test_regressor.py  test_serialization_security.py  test_sklearn_compat.py  test_timeout_retry.py
